[package]
edition = "2021"
name = "napi-tsfn"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
oneshot = "0.1.8"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
